--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -3,138 +3,185 @@
 {% block content %}
 <style>
     .profile-img {
-        width: 15px;
-        height: 15px;
+        width: 20px;
+        height: 20px;
     }
     #main-container {
         background-color: lightgray;
         display: flex;
         flex-direction: column;
+        align-items: center; /* 수직 가운데 정렬 */
     }
 
-    #main-container>.article-container {
-        width: 200px;
-        height: flex;
-        background-color: white;
+    .article-container {
+        width: flex; /* 전체 너비의 80% */
+        max-width: 600px; /* 최대 너비 설정 */
         border: 1px gray solid;
-        margin-bottom: 4px;
+        margin-bottom: 10px;
+        padding: 10px;
+        background-color: white;
     }
 
-    #main-container>.article-container>.like {
-        font-size: 15px;
+    .article-container img {
+        max-width: 100%;
+        height: auto;
+        margin-bottom: 10px;
     }
 
-    #main-container>.article-container>img {
-        width: 100px;
-        height: 100px;
+    .article-container .author {
+        font-weight: bold;
+        margin-bottom: 5px;
     }
+
+    .article-container .content {
+        margin-bottom: 5px;
+    }
+
+    .article-container .created-at {
+        font-size: 12px;
+        color: gray;
+        margin-bottom: 5px;
+    }
+
+    .article-container .like {
+        font-size: 14px;
+        color: gray;
+        margin-bottom: 5px;
+    }
+
+    .article-container .comment a {
+        color: blue;
+        text-decoration: none;
+    }
+
     .hashtags a {
         color: #2f8ad1;
         text-decoration: none;
         margin-right: 5px;
     }
-    </style>
-    {% block title %}
-    <title>오.운.완</title>
-    {% endblock title %}
-    <h1>ARTICLE LIST</h1>
-    {% if request.user.is_authenticated %}
-        <h2>{{ request.user }}</h2>
-    {% endif %}
-    <a class="nav-link" href="{% url 'articles:list-template'%}">목록</a>
-    {% if request.user.is_authenticated %}
-        <a class="nav-link" href="{% url 'articles:create-template' %}">글 작성</a>
-    {% else %}
-        <a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
-    {% endif %}
-    <a class="nav-link" href="{% url 'articles:saved-list-template'%}">저장목록 조회</a>
-    <div id="main-container"><div id="recommend-container" style="position: absolute; right: 20px; bottom: 600px;">프로필 추천</div></div>
-    <script>
-        const UserId = "{{ request.user.id }}";
-        $.ajax({
-            type: "GET",
-            url:"/accounts/auth/recommend/",
-            success: function (response) {
-                console.log(response)
-                const recommendContainer = document.getElementById('recommend-container')
-                response.forEach(function (user) {
-                    const userContainer =document.createElement('div')
-                    userContainer.classList.add('user-container')
-                    let userHTML = `
-                    <div class="address">${user.address}</div>
-                    `;
-                    if (user.profile_img) {
-                        userHTML=`<div class="user"><img src='${user.profile_img}' class="profile-img"/> ${user.username}</div>`+userHTML
-                    }
-                    else{
-                        userHTML=`<div class="user"><img src="{% static 'accounts/user.png' %}" class="profile-img"/> ${user.username}</div>`+userHTML
-                    }
-                    userContainer.innerHTML = userHTML;
-                    recommendContainer.appendChild(userContainer)
-                })
-            }
-        })
-        $.ajax({
-            type: "GET",
-            url: "/articles/",
-            success: function (response) {
-                console.log(response)
-                const mainContainer = document.getElementById('main-container')
-                response.forEach(function (article) {
-                    const articleContainer = document.createElement('div')
-                    articleContainer.classList.add('article-container')
-                    const date = new Date(article.created_at)
-                    let articleHTML = `
-                <div class="content">${article.content}</div>
-                <div class="created-at">${date.getFullYear()}-${date.getMonth()+1}-${date.getDate()}</div>
-                <div class="like">좋아요: ${article.like_count}개</div>
-                <div class="comment"><a href="/articles/${article.id}/template/">댓글 ${article.comments_count}개 모두 보기</a></div>
-                <div class="hashtags"></div>
-            `;
+    
+</style>
 
-            if (article.image) {
-                articleHTML = `<img src='${article.image}'/>` + articleHTML;
-            }
-            if (article.author_profile_img) {
-                articleHTML=`<div class="author"><img src='${article.author_profile_img}' class="profile-img"/> ${article.author_username}</div>`+articleHTML
-            }
-            else{
-                articleHTML=`<div class="author"><img src="{% static 'accounts/user.png' %}" class="profile-img"/> ${article.author_username}</div>`+articleHTML
-            }
-            if (article.author == UserId) {
-                            articleHTML = articleHTML+`<div class="update"><a href="/articles/${article.id}/update/template/">수정</a> <a href="#" onclick="deleteArticle(${article.id}); return false;">삭제</a></div>`;
-                        }
+{% block title %}
+<title>오.운.완</title>
+{% endblock title %}
 
-            articleContainer.innerHTML = articleHTML;
-                    mainContainer.appendChild(articleContainer)
-                    const hashtagsContainer = articleContainer.querySelector('.hashtags');
-            console.log(article.hashtags)
-            article.hashtags.forEach(function (hashtag) {
-    if (hashtag.name.trim() !== '') {
-        const hashtagElement = document.createElement('a');
-        hashtagElement.classList.add('hashtag');
-        hashtagElement.textContent = `#${hashtag.name} `;
-        hashtagElement.href = `${location.origin}/articles/search/${hashtag.name}/template/`;
-        hashtagsContainer.appendChild(hashtagElement);
+<div class="title">
+    <h1 style="text-align: center;font-weight: 700; color: yellow">오.운.완</h1>
+    {% if request.user.is_authenticated %}
+        <h2 style="text-align: center;font-weight: 700;">{{ request.user }}</h2>
+    {% endif %}
+</div>
+
+<div id="main-container">
+    <div id="recommend-container" style="position: absolute; right: 20px; bottom: 600px;">[프로필 추천]</div>
+    <div id="list-container" style="position: absolute; left: 20px; bottom: 600px;">
+        <a class="nav-link" href="{% url 'articles:list-template'%}"><button>게시글 목록</button></a>
+        <a class="nav-link" href="{% url 'articles:saved-list-template'%}"><button>저장목록 조회</button></a>
+        {% if request.user.is_authenticated %}
+            <a class="nav-link" href="{% url 'articles:create-template' %}"><button>글 작성</button></a>
+        {% else %}
+            <a class="nav-link" href="{% url 'accounts:login' %}"><button>로그인</button></a>
+        {% endif %}
+    </div>
+</div>
+
+<script>
+    const UserId = "{{ request.user.id }}";
+
+    // 프로필 추천을 가져오는 AJAX 요청
+
+    $.ajax({
+        type: "GET",
+        url:"/accounts/auth/recommend/",
+        success: function (response) {
+            console.log(response)
+            const recommendContainer = document.getElementById('recommend-container')
+            response.forEach(function (user) {
+                const userContainer =document.createElement('div')
+                userContainer.classList.add('user-container')
+                let userHTML = `
+                <div class="address">${user.address}</div>
+                `;
+                if (user.profile_img) {
+                    userHTML=`<div class="user"><img src='${user.profile_img}' class="profile-img"/> ${user.username}</div>`+userHTML
+                }
+                else{
+                    userHTML=`<div class="user"><img src="{% static 'accounts/user.png' %}" class="profile-img"/> ${user.username}</div>`+userHTML
+                }
+                userContainer.innerHTML = userHTML;
+                recommendContainer.appendChild(userContainer)
+            })
+        }
+    })
+
+    // 게시글 목록을 가져오는 AJAX 요청
+
+    $.ajax({
+        type: "GET",
+        url: "/articles/",
+        success: function (response) {
+            console.log(response)
+            const mainContainer = document.getElementById('main-container')
+            response.forEach(function (article) {
+                const articleContainer = document.createElement('div')
+                articleContainer.classList.add('article-container')
+                const date = new Date(article.created_at)
+                let articleHTML = `
+                    <div class="content">${article.content}</div>
+                    <div class="created-at">${date.getFullYear()}-${date.getMonth()+1}-${date.getDate()}</div>
+                    <div class="like">좋아요: ${article.like_count}개</div>
+                    <div class="comment"><a href="/articles/${article.id}/template/">댓글 ${article.comments_count}개 모두 보기</a></div>
+                    <div class="hashtags"></div>
+                `;
+
+                if (article.image) {
+                    articleHTML = `<img src='${article.image}'/>` + articleHTML;
+                }
+                if (article.author_profile_img) {
+                    articleHTML = `<div class="author"><img src='${article.author_profile_img}' class="profile-img"/> ${article.author_username}</div>` + articleHTML;
+                } else {
+                    articleHTML = `<div class="author"><img src="{% static 'accounts/user.png' %}" class="profile-img"/> ${article.author_username}</div>` + articleHTML;
+                }
+                if (article.author == UserId) {
+                    articleHTML += `<div class="update"><a href="/articles/${article.id}/update/template/">수정</a> <a href="#" onclick="deleteArticle(${article.id}); return false;">삭제</a></div>`;
+                }
+
+                articleContainer.innerHTML = articleHTML;
+
+                const hashtagsContainer = articleContainer.querySelector('.hashtags');
+                console.log(article.hashtags)
+                article.hashtags.forEach(function (hashtag) {
+                    if (hashtag.name.trim() !== '') {
+                        const hashtagElement = document.createElement('a');
+                        hashtagElement.classList.add('hashtag');
+                        hashtagElement.textContent = `#${hashtag.name} `;
+                        hashtagElement.href = `${location.origin}/articles/search/${hashtag.name}/template/`;
+                        hashtagsContainer.appendChild(hashtagElement);
+                    }
+                });
+
+                mainContainer.appendChild(articleContainer);
+            });
+        },
+    });
+
+    // 게시글 삭제 함수
+
+    function deleteArticle(articleId) {
+        if (confirm("게시글을 삭제하시겠습니까?")) {
+            $.ajax({
+                type: "DELETE",
+                url: `/articles/${articleId}/`,
+                success: function(response) {
+                    alert("게시글이 삭제되었습니다.");
+                    location.href = '/articles/list/template/';
+                },
+                error: function(xhr, textStatus, errorThrown) {
+                    alert("게시글 삭제에 실패했습니다. 다시 시도해주세요.");
+                }
+            });
+        }
     }
-});
-                })
-            },
-        });
-        function deleteArticle(articleId) {
-    if (confirm("게시글을 삭제하시겠습니까?")) {
-        $.ajax({
-            type: "DELETE",
-            url: `/articles/${articleId}/`,
-            success: function(response) {
-                alert("게시글이 삭제되었습니다.");
-                location.href = '/articles/list/template/';
-            },
-            error: function(xhr, textStatus, errorThrown) {
-                alert("게시글 삭제에 실패했습니다. 다시 시도해주세요.");
-            }
-        });
-    }
-}
-    </script>
+</script>
 {% endblock %}
