--- a/articles/templates/articles/saved_detail.html
+++ b/articles/templates/articles/saved_detail.html
@@ -10,6 +10,7 @@
         background-color: lightgray;
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
     #main-container>.saved-container {
         width: 250px;
@@ -27,16 +28,18 @@
 {% block title %}
 <title>저장목록 상세</title>
 {% endblock title %}
-<h1>SAVED DETAIL</h1>
-{% if request.user.is_authenticated %}
-    <h2>{{ request.user }}</h2>
-{% else %}
-<a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
-{% endif %}
-<a class="nav-link" href="{% url 'articles:list-template'%}">게시글 목록</a>
-<a class="nav-link" href="{% url 'articles:saved-list-template'%}">저장목록 조회</a>
+<div class="title">
+    <h1 style="text-align: center;font-weight: 700;">저장목록 상세</h1>
+    {% if request.user.is_authenticated %}
+        <h2 style="text-align: center;font-weight: 700;">{{ request.user }}</h2>
+    {% else %}
+        <a class="nav-link" href="{% url 'accounts:login' %}"><button>로그인</button></a>
+    {% endif %}
+    <a class="nav-link" href="{% url 'articles:list-template'%}" style="text-align: center;"><button>게시글 목록</button></a>
+    <a class="nav-link" href="{% url 'articles:saved-list-template'%}" style="text-align: center;"><button>저장목록 조회</button></a>
+</div>
 <div id="main-container"></div>
-<div id="articles-container"></div>
+<div id="articles-container" style="text-align: center;"></div>
 
 <script>
     const UserId = "{{ request.user.id }}";
