--- a/articles/templates/articles/saved_list.html
+++ b/articles/templates/articles/saved_list.html
@@ -3,33 +3,44 @@
 {% block content %}
 <style>
     .profile-img {
-        width: 15px;
-        height: 15px;
+        width: 20px;
+        height: 20px;
     }
     #main-container {
         background-color: lightgray;
         display: flex;
         flex-direction: column;
+        align-items: center; /* 수직 가운데 정렬 */
     }
     #main-container>.saved-container {
-        width: 250px;
-        height: flex;
-        background-color: white;
+        width: flex; /* 전체 너비의 80% */
+        max-width: 600px; /* 최대 너비 설정 */
         border: 1px gray solid;
-        margin-bottom: 4px;
+        margin-bottom: 10px;
+        padding: 10px;
+        background-color: white;
     }
 </style>
 {% block title %}
     <title>전체 저장목록</title>
 {% endblock title %}
-<h1>SAVED LIST</h1>
-{% if request.user.is_authenticated %}
-    <h2>{{ request.user }}</h2>
-{% endif %}
-<a class="nav-link" href="{% url 'articles:list-template'%}">게시글 목록</a>
-<a class="nav-link" href="{% url 'articles:saved-list-template'%}">저장목록</a>
-<a class="nav-link" href="{% url 'articles:saved-create-template'%}">저장목록 생성</a>
-<div id="main-container"></div>
+<div class="title">
+    <h1 style="text-align: center;font-weight: 700;">저장목록</h1>
+    {% if request.user.is_authenticated %}
+        <h2 style="text-align: center;font-weight: 700;">{{ request.user }}</h2>
+    {% endif %}
+</div>
+<div id="main-container">
+    <div id="list-container" style="position: absolute; left: 20px; bottom: 600px;">
+        <a class="nav-link" href="{% url 'articles:list-template'%}"><button>게시글 목록</button></a>
+        <a class="nav-link" href="{% url 'articles:saved-list-template'%}"><button>저장목록 조회</button></a>
+        {% if request.user.is_authenticated %}
+        <a class="nav-link" href="{% url 'articles:saved-create-template'%}"><button>저장목록 생성</button></a>
+        {% else %}
+            <a class="nav-link" href="{% url 'accounts:login' %}"><button>로그인</button></a>
+        {% endif %}
+    </div>
+</div>
 <script>
     const UserId = "{{ request.user.id }}";
     $.ajax({
