--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -74,7 +74,11 @@
 </div>
 
 <div id="main-container">
-    <div id="recommend-container" style="position: absolute; right: 20px; bottom: 600px;">[프로필 추천]</div>
+    <div id="recommend-container" style="position: absolute; right: 20px; bottom: 600px;">
+        {% if request.user.is_authenticated %}
+        [프로필 추천]
+        {% endif %}
+    </div>
     <div id="list-container" style="position: absolute; left: 20px; bottom: 600px;">
         <a class="nav-link" href="{% url 'articles:list-template'%}"><button>게시글 목록</button></a>
         <a class="nav-link" href="{% url 'articles:saved-list-template'%}"><button>저장목록 조회</button></a>
