--- a/articles/templates/articles/comment_detail.html
+++ b/articles/templates/articles/comment_detail.html
@@ -22,7 +22,7 @@
     {% if request.user.is_authenticated %}
         <h2 style="text-align: center;font-weight: 700;">{{ request.user }}</h2>
     {% else %}
-        <a class="nav-link" href="{% url 'accounts:login' %}"><button>로그인</button></a>
+        <a class="nav-link" href="{% url 'accounts:login' %}" style="text-align: center;"><button>로그인</button></a>
     {% endif %}
     <a class="nav-link" href="{% url 'articles:list-template'%}" style="text-align: center;"><button>게시글 목록</button></a>
 <a class="nav-link" href="{% url 'articles:detail-template' comment.article.id %}" style="text-align: center;"><button>게시글로 돌아가기</button></a>
