--- a/articles/templates/articles/hashtag_search.html
+++ b/articles/templates/articles/hashtag_search.html
@@ -69,7 +69,7 @@
     {% if request.user.is_authenticated %}
         <h2 style="text-align: center;font-weight: 700;">{{ request.user }}</h2>
     {% else %}
-        <a class="nav-link" href="{% url 'accounts:login' %}"><button>로그인</button></a>
+        <a class="nav-link" href="{% url 'accounts:login' %}" style="text-align: center;"><button>로그인</button></a>
     {% endif %}
     <h3 style="text-align: center;font-weight: 700;">#{{ hashtag }}</h3>
     <a class="nav-link" href="{% url 'articles:list-template'%}" style="text-align: center;"><button>게시글 목록</button></a>
