--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -81,6 +81,8 @@
     </div>
     <div id="list-container" style="position: absolute; left: 20px; bottom: 600px;">
         <a class="nav-link" href="{% url 'articles:list-template'%}"><button>게시글 목록</button></a>
+        <a class="nav-link" href="{% url 'articles:routine-gpt-template'%}"><button style="color: red">New! 운동 루틴 추천 AI</button></a>
+        <a class="nav-link" href="{% url 'articles:diet-gpt-template'%}"><button style="color: red">New! 다이어트 식단 추천 AI</button></a>
         <a class="nav-link" href="{% url 'articles:saved-list-template'%}"><button>저장목록 조회</button></a>
         {% if request.user.is_authenticated %}
             <a class="nav-link" href="{% url 'articles:create-template' %}"><button>글 작성</button></a>
