articles:프로필 이미지 원형 수정

--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -5,10 +5,12 @@
     .profile-img {
         width: 20px;
         height: 20px;
+        border-radius: 100%;
     }
     .comment-profile-img{
         width: 20px;
         height: 20px;
+        border-radius: 100%;
     }
     #main-container {
         background-color: lightgray;
