--- a/articles/templates/articles/comment_detail.html
+++ b/articles/templates/articles/comment_detail.html
@@ -5,11 +5,13 @@
     .profile-img {
         width: 15px;
         height: 15px;
+        border-radius: 100%;
     }
 
     .comment-profile-img {
         width: 15px;
         height: 15px;
+        border-radius: 100%;
     }
 </style>
 
