--- a/articles/templates/articles/hashtag_search.html
+++ b/articles/templates/articles/hashtag_search.html
@@ -5,6 +5,7 @@
     .profile-img {
         width: 20px;
         height: 20px;
+        border-radius: 100%;
     }
     #main-container {
         background-color: lightgray;
