--- a/articles/templates/articles/saved_detail.html
+++ b/articles/templates/articles/saved_detail.html
@@ -5,6 +5,7 @@
     .profile-img {
         width: 15px;
         height: 15px;
+        border-radius: 100%;
     }
     #main-container {
         background-color: lightgray;
