--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% load static %} {% block title %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
 <title>로그인</title>
 {% endblock title %} {% block content %}
 <div id="main-container" class="container">  
