--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -76,7 +76,7 @@
 <div class="title">
     <h1 style="text-align: center;font-weight: 700; color: yellow">오.운.완</h1>
     {% if request.user.is_authenticated %}
-        <h2 style="text-align: center;font-weight: 700;">{{ request.user }}</h2>
+        <h2 style="text-align: center;font-weight: 700;"><a href="javascript:void(0);" onclick="openProfilePopup('{{ request.user.username }}');">{{ request.user }}</a></h2>
     {% endif %}
 </div>
 
@@ -94,6 +94,7 @@
         <a class="nav-link" href="{% url 'articles:saved-list-template'%}"><button>저장목록 조회</button></a>
         {% if request.user.is_authenticated %}
             <a class="nav-link" href="{% url 'articles:create-template' %}"><button>글 작성</button></a>
+            <a class="nav-link" href="#" onclick="logout()"><button>로그아웃</button></a>
         {% else %}
             <a class="nav-link" href="{% url 'accounts:login' %}"><button>로그인</button></a>
         {% endif %}
@@ -101,6 +102,16 @@
 </div>
 
 <script>
+    function logout(){
+        $.ajax({
+        type: "POST",
+        url:"/accounts/auth/logout/",
+        success: function (response) {
+            console.log(response)
+            location.href = '/articles/list/template/';
+        }
+    })
+    }
     const UserId = "{{ request.user.id }}";
 
     // 프로필 추천을 가져오는 AJAX 요청
