--- a/articles/templates/articles/comment_detail.html
+++ b/articles/templates/articles/comment_detail.html
@@ -23,6 +23,7 @@
     <h1 style="text-align: center;font-weight: 700; color: yellow">오.운.완</h1>
     {% if request.user.is_authenticated %}
         <h2 style="text-align: center;font-weight: 700;">{{ request.user }}</h2>
+        <a class="nav-link" href="#" onclick="logout()"style="text-align: center;font-weight: 700;"><button>로그아웃</button></a>
     {% else %}
         <a class="nav-link" href="{% url 'accounts:login' %}" style="text-align: center;"><button>로그인</button></a>
     {% endif %}
@@ -52,6 +53,16 @@
 {% endif %}
 
 <script>
+    function logout(){
+        $.ajax({
+        type: "POST",
+        url:"/accounts/auth/logout/",
+        success: function (response) {
+            console.log(response)
+            location.href = '/articles/list/template/';
+        }
+    })
+    }
     const UserId = "{{ request.user.id }}";
     function likeComment(commentId) {
         $.ajax({
