--- a/accounts/templates/modify.html
+++ b/accounts/templates/modify.html
@@ -71,7 +71,7 @@
                       <option value="서울 동작구">동작구</option>
                       <option value="서울 마포구">마포구</option>
                       <option value="서울 서대문구">서대문구</option>
-                      <option value="서울 서초구">서포구</option>
+                      <option value="서울 서초구">서초구</option>
                       <option value="서울 성북구">성북구</option>
                       <option value="서울 송파구">송파구</option>
                       <option value="서울 양천구">양천구</option>
