final_project:기타 오류 수정 완료, 에러 메세지 추가 완료

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -59,6 +59,7 @@
             },
             error: function(error) {
                 console.log("error : ",error);
+                alert("로그인에 실패했습니다. 아이디 또는 비밀번호를 확인해주세요.");
             },
         });
     };
