--- a/accounts/templates/modify.html
+++ b/accounts/templates/modify.html
@@ -428,10 +428,12 @@
             contentType: false,
             processData: false,
             success: function (response) {
+                alert("회원 정보가 수정되었습니다.");
                 location.href="/accounts/profile/<str:username>/"
             },
             error: function(e) {
                 console.log(e.responseJSON)
+                alert(e.responseText);
             }
         })
     }
