--- a/articles/templates/articles/article_update.html
+++ b/articles/templates/articles/article_update.html
@@ -46,6 +46,7 @@
             contentType: false,
             processData: false,
             success: function (response) {
+                alert("게시글이 수정되었습니다.");
                 location.href = '/articles/list/template/';
             }
         });
