--- a/articles/templates/articles/comment_detail.html
+++ b/articles/templates/articles/comment_detail.html
@@ -139,6 +139,7 @@
             contentType: false,
             processData: false,
             success: function (response) {
+                alert("댓글이 수정되었습니다.");
                 location.href = `/articles/comment/${commentId}/template`;
             }
         });
